@@ -25,8 +25,7 @@
  * @test
  * @bug 8262891 8269354
  * @summary Test parenthesized pattern
- * @compile --enable-preview -source ${jdk.version} Parenthesized.java
- * @run main/othervm --enable-preview Parenthesized
+ * @enablePreview
  */
 public class Parenthesized {
     public static void main(String... args) {
